ajout de vie courante

--- a/univ/templates/accueil.html
+++ b/univ/templates/accueil.html
@@ -23,7 +23,7 @@
           <p>Bien performer dans vos études ne veut pas dire vivre comme un ascète. La vie sociale est une
               réalité de notre campus. De nombreuses activités vous sont offertes. Vous pouvez créer les votres
               si le coeur vous en dit..</p>
-          <p><a class="btn btn-success" href="{% url 'endev' %}" role="button">Plus ... &raquo;</a></p>
+          <p><a class="btn btn-success" href="{% url 'vie_courante' %}" role="button">Plus ... &raquo;</a></p>
         </div>
       </div>
     </div>
