--- a/univ/templates/base.html
+++ b/univ/templates/base.html
@@ -53,11 +53,12 @@
                         <h1>Université virtuelle</h1>
                         <p>Apprendre à partir de n'importe où, n'importe quand, à votre rythme</p>
                         <p>Un projet en Python, exclusivement!</p>
-                        <p><a class="btn btn-success btn-lg" href="{% url 'endev' %}" role="button">Accueil &raquo;</a></p>
+                        <p><a class="btn btn-success btn-lg" href="{% url 'accueil' %}" role="button">Accueil &raquo;</a></p>
                     </div>
                     <div class="col-lg-4">
                         <div class="image">
-                            <p><IMG SRC="{% static 'univ/img/univ.jpg' %}" ALT="Université" TITLE="Amphithéâtre"></p>
+                            <p><IMG SRC="{% static 'univ/img/univ.jpg' %}" ALT="Université" TITLE="Amphithéâtre"
+                            height="200px" width="300px"></p>
                         </div>
                     </div>
                 </div>
