ajout liste cours et organisation

--- a/univ/templates/accueil.html
+++ b/univ/templates/accueil.html
@@ -9,7 +9,7 @@
           <p>Nous vous offrons un choix large de formations de qualité, toutes disponibles à chaque session.
           Fini les choix cornéliens, fini les difficultés d'agenda. Faites votre liste, inscrivez-vous,
           nous ferons le reste!</p>
-          <p><a class="btn btn-success" href="{% url 'endev' %}" role="button">Allons-y ... &raquo;</a></p>
+          <p><a class="btn btn-success" href="{% url 'programmes' %}" role="button">Allons-y ... &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Les cursus</h2>
