--- a/univ/templates/programmes.html
+++ b/univ/templates/programmes.html
@@ -9,14 +9,14 @@
           <p>Nous vous offrons un choix large de formations de qualité, toutes disponibles à chaque session.
           Fini les choix cornéliens, fini les difficultés d'agenda. Faites votre liste, inscrivez-vous,
           nous ferons le reste!</p>
-          <p><a class="btn btn-success" href="{% url 'endev' %}" role="button">Allons-y ... &raquo;</a></p>
+          <p><a class="btn btn-success" href="{% url 'organisation' %}" role="button">Allons-y ... &raquo;</a></p>
         </div>
         <div class="col-md-6">
           <h2>Les cours relatifs</h2>
           <p>Des programmes techniques, littéraires, scientifiques, tous est possible. Le passage d'un programme
           a un autre est possible n'importe quand. Tous les cours déjà faits seront crédités sans discussions.
           Faites un tour pour voir l'étendue de l'offre</p>
-          <p><a class="btn btn-success" href="{% url 'endev' %}" role="button">Choisir ... &raquo;</a></p>
+          <!--<p><a class="btn btn-success" href="{% url 'endev' %}" role="button">Choisir ... &raquo;</a></p>-->
         </div>
       </div>
     </div>
