mise a jour image univ

--- a/univ/templates/footer.html
+++ b/univ/templates/footer.html
@@ -21,7 +21,7 @@
         </div>
         <hr>
         <footer>
-            <p>&copy; 2015 FORMAPRO, Qc.</p>
+            <p>&copy; 2016 FORMAPRO, Qc - Tous droits réservés </p>
         </footer>
     </div>
 </div> <!-- /container -->
