--- a/univ/templates/organisation.html
+++ b/univ/templates/organisation.html
@@ -3,7 +3,6 @@
 
 {% block contenu %}
     <div class="container">
-        <!-- Example row of columns -->
         <div class="row">
             <h2>Les programmes proposés</h2>
             <hr>
@@ -23,7 +22,7 @@
                     {% endfor %}
                     <hr>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-md-2">
                     {{ prog.image.url }}
                 </div>
             {% endfor %}
