--- a/univ/templates/base.html
+++ b/univ/templates/base.html
@@ -45,7 +45,7 @@
             </div>
         </nav>
 
-        <!-- Main jumbotron for a primary marketing message or call to action -->
+        <!-- Main jumbotron  -->
         <div class="jumbotron">
             <div class="container">
                 <div class="row">
