--- a/univ/templates/inscriptions.html
+++ b/univ/templates/inscriptions.html
@@ -14,7 +14,7 @@
                 <li>Attendre la confirmation de l'université</li>
                 <li>Se procurer les documents obligatoires pour les cours choisis</li>
             </ul>
-          <p><a class="btn btn-success" href="{% url 'endev' %}" role="button">Confirmez ... &raquo;</a></p>
+          <p><a class="btn btn-success btn-block" href="{% url 'inscription_form' %}" role="button">Inscrivez-vous! ... &raquo;</a></p>
         </div>
         <div class="col-md-6">
           <h2>Les documents nécessaires</h2>
@@ -24,8 +24,8 @@
                 <li>Permis de conduire</li>
                 <li>Passport (obligatoire pour les étudiant-es non-résident-es)</li>
                 <li>Extrait de naissance</li>
+                <li>Pour tout autre document, voir directement avec le registraire</li>
             </ul>
-          <p><a class="btn btn-success" href="{% url 'endev' %}" role="button">Choisir ... &raquo;</a></p>
         </div>
       </div>
     </div>
