--- a/univ/templates/inscription_form.html
+++ b/univ/templates/inscription_form.html
@@ -2,20 +2,26 @@
 
 {% block contenu %}
     <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-6">
-            <p><h4><span class="glyphicon glyphicon-education"></span>  Formulaire inscription </h4></p>
-            <form action="#" method="post">
-                {% csrf_token %}
-                {{ formulaire.as_p }}
-            </form>
-          <p><a class="btn btn-danger" href="{% url 'endev' %}" role="button">Confirmez les informations ... &raquo;</a></p>
+        <p><h3> Formulaire inscription </h3></p>
+        <div class="row">
+            <div class="col-md-4">
+                <p><h4>Données personnelles</h4></p>
+                <form action="{% url "endev" %}" method="post">
+                    {% csrf_token %}
+                    {{ formulaire.as_p }}
+                    <input type="submit" class="btn btn-success btn-block" value="Confirmez les informations">
+                </form>
+            </div>
+            <div class="col-md-4">
+              <h4>Choix de programme</h4>
+                <p>Récapitulation des informations d'inscription</p>
+                <p><a class="btn btn-danger btn-block" href="{% url 'endev' %}" role="button">Confirmez le programme</a></p>
+            </div>
+            <div class="col-md-4">
+              <h4>Choix de cours</h4>
+                <p>Récapitulation des informations d'inscription</p>
+                <p><a class="btn btn-danger btn-block" href="{% url 'endev' %}" role="button">Confirmez les cours</a></p>
+            </div>
         </div>
-        <div class="col-md-6">
-          <h4>Récapitulatif</h4>
-            <p>Récapitulation des informations d'inscription</p>
-        </div>
-      </div>
     </div>
 {% endblock %}
