--- a/univ/templates/footer.html
+++ b/univ/templates/footer.html
@@ -8,9 +8,9 @@
             </div>
             <div class="col-lg-4">
                 <h4>Contact</h4>
-                <p><span class="glyphicon glyphicon-earphone"></span> Téléphone : 418 997-7761</p>
-                <p><span class="glyphicon glyphicon-envelope"></span> Courriel  : admin@tradom.ca</p>
-                <p><span class="glyphicon glyphicon-home"></span> Adresse   : La belle province</p>
+                <p><span class="glyphicon glyphicon-earphone"></span> 418 997-7761</p>
+                <p><span class="glyphicon glyphicon-envelope"></span> admin@tradom.ca</p>
+                <p><span class="glyphicon glyphicon-home"></span> La belle province</p>
             </div>
             <div class="col-lg-4">
                 <h4>Officiel</h4>
