--- a/univ/templates/footer.html
+++ b/univ/templates/footer.html
@@ -1,22 +1,34 @@
 <div class="container-fluid">
     <div class="basdepage">
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-1">
+                {# créer un décalage dans l'affichage!!! il y a certainement plus élégant! #}
+            </div>
+            <div class="col-lg-3">
                 <h4>Informations</h4>
                 <p><span class="glyphicon glyphicon-warning-sign"></span> Tout le contenu de ce site est protégé
                     par les droits d'auteur. Veuillez ne pas l'oublier!</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-2">
                 <h4>Contact</h4>
                 <p><span class="glyphicon glyphicon-earphone"></span> 418 997-7761</p>
                 <p><span class="glyphicon glyphicon-envelope"></span> admin@tradom.ca</p>
                 <p><span class="glyphicon glyphicon-home"></span> La belle province</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-2">
                 <h4>Officiel</h4>
                 <p><span class="glyphicon glyphicon-bookmark"></span> Utilisation du site</p>
                 <p><span class="glyphicon glyphicon-book"></span> Licence</p>
                 <p><span class="glyphicon glyphicon-list"></span> Légal</p>
+            </div>
+            <div class="col-lg-3">
+                <h4>Administration</h4>
+                <p>Les données d'administration de ce site ne sont pas accessibles aux personnes
+                    non enregistrées. Veuillez demander votre enregistrement avant de tenter
+                    d'acceder au site admin. Merci</p>
+            </div>
+            <div class="col-lg-1">
+                {# juste pour voir! #}
             </div>
         </div>
         <hr>
