--- a/univ/templates/footer.html
+++ b/univ/templates/footer.html
@@ -1,10 +1,7 @@
-<div class="container-fluid">
+<div class="container">
     <div class="basdepage">
         <div class="row">
-            <div class="col-lg-1">
-                {# créer un décalage dans l'affichage!!! il y a certainement plus élégant! #}
-            </div>
-            <div class="col-lg-3">
+            <div class="col-lg-4">
                 <h4>Informations</h4>
                 <p><span class="glyphicon glyphicon-warning-sign"></span> Tout le contenu de ce site est protégé
                     par les droits d'auteur. Veuillez ne pas l'oublier!</p>
@@ -21,14 +18,11 @@
                 <p><span class="glyphicon glyphicon-book"></span> Licence</p>
                 <p><span class="glyphicon glyphicon-list"></span> Légal</p>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-4">
                 <h4>Administration</h4>
                 <p>Les données d'administration de ce site ne sont pas accessibles aux personnes
-                    non enregistrées. Veuillez demander votre enregistrement avant de tenter
-                    d'acceder au site admin. Merci</p>
-            </div>
-            <div class="col-lg-1">
-                {# juste pour voir! #}
+                    non enregistrées. Veuillez demander votre enregistrement sur le site avant de tenter
+                    d'acceder aux données d'administration.<br /> Merci</p>
             </div>
         </div>
         <hr>
