--- a/univ/templates/footer.html
+++ b/univ/templates/footer.html
@@ -5,6 +5,7 @@
                 <h4>Informations</h4>
                 <p><span class="glyphicon glyphicon-warning-sign"></span> Tout le contenu de ce site est protégé
                     par les droits d'auteur. Veuillez ne pas l'oublier!</p>
+                <p><span class="fa fa-sitemap"></span> Le plan du site</p>
             </div>
             <div class="col-lg-2">
                 <h4>Contact</h4>
