--- a/univ/templates/base.html
+++ b/univ/templates/base.html
@@ -14,7 +14,10 @@
         <title>Univ</title>
 
         <!-- Bootstrap core CSS -->
-        <link href="{% static 'univ/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'univ/bootstrap/css/bootstrap.min.css' %}">
+
+        {# lien vers FontAwesome #}
+        <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
 
         <!-- Custom styles for this template -->
         <link href="{% static 'univ/css/base.css' %}" rel="stylesheet">
@@ -33,11 +36,13 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <form class="navbar-form navbar-right">
-                        <div class="form-group">
-                            <input type="text" placeholder="Courriel" class="form-control">
+                        <div class="input-group margin-bottom-sm">
+                            <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+                            <input class="form-control" type="text" placeholder="Courriel">
                         </div>
-                        <div class="form-group">
-                            <input type="password" placeholder="Mot de passe" class="form-control">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
+                            <input class="form-control" type="password" placeholder="Mot de passe">
                         </div>
                         <button type="submit" class="btn btn-success" href="{% url 'endev' %}">Inscrivez-vous</button>
                     </form>
