--- a/univ/templates/inscription_form.html
+++ b/univ/templates/inscription_form.html
@@ -29,8 +29,8 @@
         </div>
         <div class="row">
             <p>
-                <a class="btn btn-danger" href="{% url 'inscription_confirmation' %}"
-                  role="button">Confirmez votre demande d'inscription</a>
+                <a class="btn btn-success" href="{% url 'inscription_confirmation' %}"
+                  role="button"><span class="fa fa-flag-checkered fa-2x pull-left"></span> Confirmez votre demande d'inscription</a>
             </p>
         </div>
     </div>
