--- a/univ/templates/inscriptions.html
+++ b/univ/templates/inscriptions.html
@@ -14,7 +14,7 @@
                 <li>Attendre la confirmation de l'université</li>
                 <li>Se procurer les documents obligatoires pour les cours choisis</li>
             </ul>
-          <p><a class="btn btn-success btn-block" href="{% url 'inscription_form' %}" role="button">Inscrivez-vous! ... &raquo;</a></p>
+          <p><a class="btn btn-success " href="{% url 'inscription_form' %}" role="button">Inscrivez-vous! ... &raquo;</a></p>
         </div>
         <div class="col-md-6">
           <h2>Les documents nécessaires</h2>
