--- a/univ/templates/accueil.html
+++ b/univ/templates/accueil.html
@@ -4,21 +4,21 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <h2>Choisir son avenir!</h2>
           <p>Nous vous offrons un choix large de formations de qualité, toutes disponibles à chaque session.
           Fini les choix cornéliens, fini les difficultés d'agenda. Faites votre liste, inscrivez-vous,
           nous ferons le reste!</p>
           <p><a class="btn btn-success" href="{% url 'programmes' %}" role="button">Allons-y ... &raquo;</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <h2>Les cursus</h2>
           <p>Des programmes techniques, littéraires, scientifiques, tous est possible. Le passage d'un programme
           a un autre est possible n'importe quand. Tous les cours déjà faits seront crédités sans discussions.
           Faites un tour pour voir l'étendue de l'offre</p>
           <p><a class="btn btn-success" href="{% url 'endev' %}" role="button">Choisir ... &raquo;</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm-4">
           <h2>La vie courante</h2>
           <p>Bien performer dans vos études ne veut pas dire vivre comme un ascète. La vie sociale est une
               réalité de notre campus. De nombreuses activités vous sont offertes. Vous pouvez créer les votres
