--- a/univ/templates/endev.html
+++ b/univ/templates/endev.html
@@ -15,7 +15,8 @@
                 <p>Un gros merci</p>
                 <p>À la prochaine</p>
             </h4>
-            <a class="btn btn-success"  href="{% url "accueil" %}">Retour à l'accueil</a>
+            <a class="btn btn-success"  href="{% url "accueil" %}">
+                <span class="fa fa-home fa-2x pull-left"></span>Retour à l'accueil</a>
         </div>
       </div>
     </div>
