--- a/univ/templates/inscription_form.html
+++ b/univ/templates/inscription_form.html
@@ -30,7 +30,7 @@
         <div class="row">
             <p>
                 <a class="btn btn-success" href="{% url 'inscription_confirmation' %}"
-                  role="button"><span class="fa fa-flag-checkered fa-2x pull-left"></span> Confirmez votre demande d'inscription</a>
+                  role="button"><span class="fa fa-check-square  pull-left"></span> Confirmez votre demande d'inscription</a>
             </p>
         </div>
     </div>
