--- a/univ/templates/inscriptions.html
+++ b/univ/templates/inscriptions.html
@@ -5,8 +5,8 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
-          <h2>Inscription</h2>
-          <p>les étapes à suivre</p>
+          <h2><span class="fa fa-caret-square-o-right fa-2x"></span> Inscription</h2>
+          <p><h4>les étapes à suivre</h4></p>
             <ul>
                 <li>Choisir un programme</li>
                 <li>Vérifier les horaires de cours</li>
@@ -17,8 +17,8 @@
           <p><a class="btn btn-success " href="{% url 'inscription_form' %}" role="button">Inscrivez-vous! ... &raquo;</a></p>
         </div>
         <div class="col-md-6">
-          <h2>Les documents nécessaires</h2>
-          <p>Choisir deux documents parmi ...</p>
+          <h2><span class="fa fa-file-image-o fa-2x"></span> Les documents nécessaires</h2>
+          <p><h4>Choisir deux documents parmi ...</h4></p>
             <ul>
                 <li>Carte d'assurance sociale</li>
                 <li>Permis de conduire</li>
