--- a/univ/templates/base.html
+++ b/univ/templates/base.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Université</a>
+                    <a class="navbar-brand" href="/">Accueil</a>
                     <a class="navbar-brand" href="{% url 'programmes' %}">Programmes</a>
                     <a class="navbar-brand" href="{% url 'inscriptions' %}">Inscriptions</a>
                 </div>
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8">
-                        <h1>Université virtuelle</h1>
+                        <h1><span><img src="{% static 'univ/img/logo.jpg' %}" alt="Logo"></span>  Université virtuelle</h1>
                         <p>Apprendre à partir de n'importe où, n'importe quand, à votre rythme</p>
                         <p>Un projet en Python, exclusivement!</p>
                         <p><a class="btn btn-success btn-lg" href="{% url 'accueil' %}" role="button">
@@ -53,7 +53,7 @@
                     <div class="col-sm-4">
                         <div class="image">
                             <p><IMG SRC="{% static 'univ/img/univ.jpg' %}" ALT="Université" TITLE="Amphithéâtre"
-                            height="200px" width="300px"></p>
+                            height="300px" width="500px"></p>
                         </div>
                     </div>
                 </div>
