--- a/univ/templates/programmes.html
+++ b/univ/templates/programmes.html
@@ -5,14 +5,14 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-6">
-          <h2>Choisir un programme</h2>
+          <h2><span class="fa fa-tasks fa-2x"></span> Choisir un programme</h2>
           <p>Nous vous offrons un choix large de formations de qualité, toutes disponibles à chaque session.
           Fini les choix cornéliens, fini les difficultés d'agenda. Faites votre liste, inscrivez-vous,
           nous ferons le reste!</p>
           <p><a class="btn btn-success" href="{% url 'organisation' %}" role="button">Allons-y ... &raquo;</a></p>
         </div>
         <div class="col-md-6">
-          <h2>Les cours relatifs</h2>
+          <h2><span class="fa fa-graduation-cap fa-2x"></span> Les cours relatifs</h2>
           <p>Des programmes techniques, littéraires, scientifiques, tous est possible. Le passage d'un programme
           a un autre est possible n'importe quand. Tous les cours déjà faits seront crédités sans discussions.
           Faites un tour pour voir l'étendue de l'offre</p>
