--- a/univ/static/univ/css/base.css
+++ b/univ/static/univ/css/base.css
@@ -1,10 +1,12 @@
 .jumbotron {
     background-color: #f28419;
     padding-bottom: 0px;
+    color: #f7f7f7;
 }
 
 .jumbotron h1 {
     font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
+    color: white;
 }
 
 .image {
