modif formulaire datas inscription

--- a/univ/templates/coordonnees.html
+++ b/univ/templates/coordonnees.html
@@ -3,7 +3,7 @@
 {% block contenu %}
     <div class="container">
     Zone de block contenu
-    vous avez envoyé : {{ form_coordonnees.addresse_courriel }}
-    et {{ form_coordonnees.mot_de_passe }}
+    vous avez envoyé l'adresse de courriel : {{ courriel }}
+    et le mot de passe : {{ mdp }}
     </div>
 {% endblock %}
