formatage datas footer

--- a/univ/templates/inscription_confirmation.html
+++ b/univ/templates/inscription_confirmation.html
@@ -7,6 +7,7 @@
             <div class="col-lg-8">
                 <div class="alert alert-success">
                     <p><h3><span class="glyphicon glyphicon-ok-sign"></span> Confirmation</h3></p>
+                    <p><h5> Bonjour {{ nom }} {{ prenom }}</h5></p>
                     <p>Votre inscription a bien été envoyée à l'administration</p>
                     <p>Vous recevrez une confirmation écrite par courriel à l'adresse que vous avez utilisée dans le formulaire</p>
                     <p>Nous vous souhaitons une bonne formation!</p>
