--- a/univ/templates/footer.html
+++ b/univ/templates/footer.html
@@ -33,7 +33,7 @@
                                name="mot_de_passe">
                     </div>
                     <div class="input-group">
-                        <button type="submit" class="btn btn-success btn-block">Inscrivez-vous</button>
+                        <button type="submit" class="btn btn-success">Inscrivez-vous</button>
                     </div>
                 </form>
             </div>
