--- a/univ/templates/inscription_form.html
+++ b/univ/templates/inscription_form.html
@@ -6,21 +6,21 @@
         <div class="row">
             <div class="col-md-4">
                 <p><h4>Données personnelles</h4></p>
-                <form action="{% url "endev" %}" method="post">
+                <form action="{% url "inscription_confirmation" %}" method="post">
                     {% csrf_token %}
                     {{ formulaire_inscription.as_p }}
                 </form>
             </div>
             <div class="col-md-4">
                 <h4>Sélectionnez un programme</h4>
-                <form action="{% url "endev" %}" method="post">
+                <form action="{% url "inscription_confirmation" %}" method="post">
                     {% csrf_token %}
                     {{ formulaire_programme }}
                 </form>
             </div>
             <div class="col-md-4">
               <h4>Sélectionnez les cours</h4>
-                <form action="{% url "endev" %}" method="post">
+                <form action="{% url "inscription_confirmation" %}" method="post">
                     {% csrf_token %}
                     {{ formulaire_cours }}
                 </form>
