--- a/univ/templates/inscription_confirmation.html
+++ b/univ/templates/inscription_confirmation.html
@@ -7,8 +7,8 @@
             <div class="col-lg-8">
                 <div class="alert alert-success">
                     <p><h3><span class="glyphicon glyphicon-ok-sign"></span> Confirmation</h3></p>
-                    <p>Votre inscription a bien été envoyée à l'administration</p>
-                    <p>Vous recevrez une confirmation écrite par courriel à l'adresse que vous avez utilisée dans le formulaire</p>
+                    <p>Votre inscription a bien été envoyée à l'administration le {{ date_inscription }}</p>
+                    <p>Vous recevrez une confirmation écrite par courriel à l'adresse : {{ courriel }}</p>
                     <p>Nous vous souhaitons une bonne formation!</p>
                 </div>
                 <p><a class="btn btn-success" href="{% url 'accueil' %}" role="button">
