--- a/univ/templates/ins_cours_form.html
+++ b/univ/templates/ins_cours_form.html
@@ -7,7 +7,7 @@
         <p><h3> Formulaire inscription </h3></p>
         <div class="row">
             <div class="col-md-4">
-                <p><h3><span class="fa fa-graduation-cap"></span> Troisième étape</h3></p>
+                <p><h3><span class="fa fa-university"></span> Troisième étape</h3></p>
                 <p>Choisissez vos cours</p>
             </div>
             <div class="col-md-4">
