mise à jour static

--- a/univ/templates/base.html
+++ b/univ/templates/base.html
@@ -63,7 +63,9 @@
         {% block contenu %}
 
         {% endblock %}
-        <hr>
+
+        {% include 'espace.html' %}
+
         {% include 'footer.html' %}
     </body>
 </html>
