--- a/univ/templates/ins_coordonnees_form.html
+++ b/univ/templates/ins_coordonnees_form.html
@@ -8,13 +8,14 @@
             <div class="col-md-4">
                 <p><h3><span class="fa fa-user"></span> Première étape</h3></p>
                 <p>Envoyez vos données personnelles</p>
-            </div>
-            <div class="col-md-4">
-                <form action="{% url "inscription_form" %}" method="post">
+                 <form action="{% url "inscription_confirmation" %}" method="post">
                     {% csrf_token %}
                     {{ formulaire_inscription|crispy }}
                     <input type="submit" value="Confirmez">
                 </form>
+            </div>
+            <div class="col-md-4">
+
             </div>
             <div class="col-md-4">
 
