modification processus inscription 2

--- a/univ/templates/inscription_confirmation.html
+++ b/univ/templates/inscription_confirmation.html
@@ -8,7 +8,19 @@
                 <div class="alert alert-success">
                     <p><h3><span class="glyphicon glyphicon-ok-sign"></span> Confirmation</h3></p>
                     <p>Bonjour <strong>{{ prenom }} {{ nom }}</strong></p>
-                    <p>Votre inscription a bien été envoyée à l'administration le {{ date_inscription }}</p>
+                    <p>Votre inscription au programme {{ prog }} <br>a bien été envoyée à l'administration le {{ date_inscription }}</p>
+                    <p>Votre liste de cours : </p>
+                    <p>
+                        <ul>
+                            {% for c in cours %}
+                                <div class="checkbox">
+                                {{ c.titre }}
+                                </div>
+                            {% endfor %}
+
+                        </ul>
+                    </p>
+                    <hr>
                     <p>Vous recevrez une confirmation écrite par courriel à l'adresse : {{ courriel }}</p>
                     <p>Nous vous souhaitons une bonne formation!</p>
                 </div>
