--- a/univ/templates/ins_coordonnees_form.html
+++ b/univ/templates/ins_coordonnees_form.html
@@ -6,7 +6,7 @@
         <p><h2> Formulaire inscription </h2></p>
         <div class="row">
             <div class="col-md-4">
-                <p><h3><span class="fa fa-user"></span> Première étape</h3></p>
+                <p><h3><span class="fa fa-user"></span> Remplissez les champs</h3></p>
                 <p>Envoyez vos données personnelles</p>
                  <form action="{% url "inscription_confirmation" %}" method="post">
                     {% csrf_token %}
