--- a/univ/templates/base.html
+++ b/univ/templates/base.html
@@ -32,7 +32,7 @@
                     <a class="navbar-brand" href="/">Accueil</a>
                     <a class="navbar-brand" href="{% url 'programmes' %}">Programmes</a>
                     <a class="navbar-brand" href="{% url 'inscriptions' %}">Inscriptions</a>
-                    <a class="navbar-brand" href="{% url 'etudiants' %}">Étudiants</a>
+                    <a class="navbar-brand" href="{% url 'liste_etudiants' %}">Étudiants</a>
                 </div>
                 <div id="navbar" class="navbar-right">
                     <a class="navbar-brand" href="{% url 'admin:index' %}">Administration</a>
