--- a/univ/templates/base.html
+++ b/univ/templates/base.html
@@ -67,6 +67,6 @@
 
         {% include 'espace.html' %}
 
-        {% include 'footer.html' %}
+        {% include 'footer_fat.html' %}
     </body>
 </html>
