--- a/univ/templates/footer_fat.html
+++ b/univ/templates/footer_fat.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3>Universités</h3>
-                    <ul class="leftfloated block50">
+                    <ul>
                         <li><a href="#">Université Laval (Québec)</a></li>
                         <li><a href="#">Université de Montréal (Montréal)</a></li>
                         <li><a href="#">Université de Québec à Montréal (UQAM)</a></li>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="col-lg-2">
                     <h3 class="contacts">Contacts</h3>
-                    <ul class="nav-list-inline">
+                    <ul>
                         <li><a href="#">Inscription</a></li>
                         <li><a href="#">Donateurs</a></li>
                         <li><a href="mailto:admin@tradom.ca">Web maistre</a></li>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-lg-2">
                     <h3>Social</h3>
-                    <ul class="social">
+                    <ul>
                         <li class="facebook" title="Facebook"><a href="#">Facebook</a></li>
                         <li class="gPlus" title="Google+"><a href="#">Google+</a></li>
                         <li class="in" title="LinkedIn"><a href="#">LinkedIn</a></li>
@@ -63,12 +63,11 @@
                 <div class="row">
                     <p>
                         &copy; 2016 FORMAPRO. Tous droits réservés.
-                        Développé avec <a href="https://www.jetbrains.com/pycharm/">PyCharm</a>
+                        Développé avec <a href="https://www.jetbrains.com/pycharm/">PyCharm </a>et
+                        <a href="https://www.djangoproject.com/"> Django</a>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href="#">Vie privée</a> | <a href="#">Limites d'utilisation</a>
                     </p>
-                    <ul class="block30 nav-list-inline">
-                        <li><a href="#">Vie privée</a></li>
-                        <li><a href="#">Limites d'utilisation</a></li>
-                    </ul>
                     <br class="clr"/>
                 </div>
             </div>
