fat footer 3 static

--- a/univ/static/univ/css/base.css
+++ b/univ/static/univ/css/base.css
@@ -20,14 +20,13 @@ footer {
 }
 
 .footer-main {
-    background-color: InfoText;
+    background-color: #282828;
     color: gray;
 }
 
 .footer-main ul {
     color: cornflowerblue;
 }
-
 .footer-main-bas {
     color: gray;
 }
